kubernates-basic/INGRESS/ingress.yaml
# api version for ingress
apiVersion: networking.k8s.io/v1
# types of object
kind: Ingress
# metadata = general infromation about it
metadata:
  name: finance-ingress
# specification 
  namespace: finance
spec:
  ingressClassName: nginx
  rules:
    # host name will be used in browser
    - host: finance.local
      http:
        paths:
          # =========================
          # Backend API route
          # =========================
          # Request to:  http://finance.local/api/transactions
          # Matches /api/... and sends to backend-service
          # After rewrite, backend may receive /transactions
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port: 
                  number: 5000
                    # =========================
          # Frontend route
          # =========================
          # Request to:  http://finance.local/
          # Goes to:     frontend-service:80
          - path: /
            pathType: Prefix
            #destination target
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
